adopt to java 8