@@ -19,41 +19,38 @@
 package org.apache.maven.plugins.deploy;
 
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.security.DigestOutputStream;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
 import java.util.List;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
-import org.apache.maven.api.Project;
-import org.apache.maven.api.Session;
-import org.apache.maven.api.plugin.Log;
+import org.apache.maven.plugin.logging.Log;
+import org.apache.maven.project.MavenProject;
 
 public class BundleService {
 
-    Project project;
-    Session session;
+    MavenProject project;
     Log log;
 
-    public BundleService(Project project, Session session, Log log) {
+    public BundleService(MavenProject project, Log log) {
         this.project = project;
-        this.session = session;
         this.log = log;
     }
 
-    static final List<String> CHECKSUM_ALGOS = List.of("MD5", "SHA-1", "SHA-256");
+    static final List<String> CHECKSUM_ALGOS = Arrays.asList("MD5", "SHA-1", "SHA-256");
 
-    public void createZipBundle(File bundleFile) throws IOException, NoSuchAlgorithmException {
-        List<Project> projects = session.getProjects();
-        try (ZipOutputStream zipOut = new ZipOutputStream(new FileOutputStream(bundleFile))) {
-            for (Project subproject : projects) {
+    public void createZipBundle(File bundleFile, List<MavenProject> projects)
+            throws IOException, NoSuchAlgorithmException {
+        try (ZipOutputStream zipOut = new ZipOutputStream(Files.newOutputStream(bundleFile.toPath()))) {
+            for (MavenProject subproject : projects) {
                 File artifactDir = new File(subproject.getBuild().getDirectory());
                 File[] files = artifactDir.listFiles(
                         (dir, name) -> name.endsWith(".jar") || name.endsWith(".pom") || name.endsWith(".asc"));
@@ -78,7 +75,7 @@ public class BundleService {
         log.info("Created bundle at: " + bundleFile.getAbsolutePath());
     }
 
-    private File generateChecksum(File file, String algo) throws NoSuchAlgorithmException, IOException {
+    public File generateChecksum(File file, String algo) throws NoSuchAlgorithmException, IOException {
         String extension = algo.toLowerCase().replace("-", "");
         File checksumFile = new File(file.getAbsolutePath() + "." + extension);
         if (checksumFile.exists()) {
@@ -86,16 +83,26 @@ public class BundleService {
         }
 
         MessageDigest digest = MessageDigest.getInstance(algo);
-        try (InputStream is = new FileInputStream(file);
-                DigestOutputStream dos = new DigestOutputStream(OutputStream.nullOutputStream(), digest)) {
-            is.transferTo(dos);
+        try (InputStream is = Files.newInputStream(file.toPath());
+                OutputStream nullOut = new OutputStream() {
+                    @Override
+                    public void write(int b) {}
+                };
+                DigestOutputStream dos = new DigestOutputStream(nullOut, digest)) {
+
+            byte[] buffer = new byte[8192];
+            int bytesRead;
+            while ((bytesRead = is.read(buffer)) != -1) {
+                dos.write(buffer, 0, bytesRead);
+            }
         }
 
         StringBuilder sb = new StringBuilder();
         for (byte b : digest.digest()) {
             sb.append(String.format("%02x", b));
         }
-        Files.writeString(checksumFile.toPath(), sb.toString());
+
+        Files.write(checksumFile.toPath(), sb.toString().getBytes(StandardCharsets.UTF_8));
         return checksumFile;
     }
 }
