@@ -19,23 +19,25 @@
 package org.apache.maven.plugins.deploy;
 
 import java.io.File;
+import java.util.Arrays;
 import java.util.List;
 
-import org.apache.maven.api.Project;
-import org.apache.maven.api.plugin.MojoException;
-import org.apache.maven.api.plugin.annotations.Mojo;
-import org.apache.maven.api.plugin.annotations.Parameter;
+import org.apache.maven.plugin.MojoExecutionException;
+import org.apache.maven.plugins.annotations.LifecyclePhase;
+import org.apache.maven.plugins.annotations.Mojo;
+import org.apache.maven.plugins.annotations.Parameter;
+import org.apache.maven.project.MavenProject;
 
 import static org.apache.maven.plugins.deploy.CentralPortalClient.CENTRAL_PORTAL_URL;
 
 /**
  * mvn deploy:release
  */
-@Mojo(name = "release", defaultPhase = "deploy")
+@Mojo(name = "release", defaultPhase = LifecyclePhase.DEPLOY)
 public class CentralReleaseMojo extends AbstractDeployMojo {
 
     @Parameter(defaultValue = "${project}", readonly = true)
-    private Project project;
+    private MavenProject project;
 
     @Parameter(property = "central.username")
     private String username;
@@ -46,41 +48,47 @@ public class CentralReleaseMojo extends AbstractDeployMojo {
     @Parameter(property = "central.url", defaultValue = CENTRAL_PORTAL_URL)
     private String centralUrl;
 
-    private static final List<String> CHECKSUM_ALGOS = List.of("MD5", "SHA-1");
+    @Parameter(defaultValue = "${reactorProjects}", required = true, readonly = true)
+    private List<MavenProject> reactorProjects;
 
     @Override
-    public void execute() throws MojoException {
+    public void execute() throws MojoExecutionException {
         File targetDir = new File(project.getBuild().getDirectory());
         File bundleFile = new File(targetDir, project.getArtifactId() + "-" + project.getVersion() + "-bundle.zip");
 
         try {
-            BundleService bundleService = new BundleService(project, session, getLog());
-            bundleService.createZipBundle(bundleFile);
+            BundleService bundleService = new BundleService(project, getLog());
+            bundleService.createZipBundle(bundleFile, reactorProjects);
 
             CentralPortalClient client = new CentralPortalClient(username, password, centralUrl);
 
             String deploymentId = client.upload(bundleFile);
             if (deploymentId == null) {
-                throw new MojoException("Failed to upload bundle");
+                throw new MojoExecutionException("Failed to upload bundle");
             }
 
             getLog().info("Deployment ID: " + deploymentId);
             String status = client.getStatus(deploymentId);
 
             int retries = 10;
-            while (!List.of("PUBLISHING", "PUBLISHED", "FAILED").contains(status) && retries-- > 0) {
+            while (!Arrays.asList("PUBLISHING", "PUBLISHED", "FAILED").contains(status) && retries-- > 0) {
                 getLog().info("Deploy status is " + status);
                 Thread.sleep(10000);
                 status = client.getStatus(deploymentId);
             }
 
             switch (status) {
-                case "PUBLISHING" -> getLog().info("Published: Project is publishing on Central");
-                case "PUBLISHED" -> getLog().info("Published successfully");
-                default -> throw new MojoException("Release failed with status: " + status);
+                case "PUBLISHING":
+                    getLog().info("Published: Project is publishing on Central");
+                    break;
+                case "PUBLISHED":
+                    getLog().info("Published successfully");
+                    break;
+                default:
+                    throw new MojoExecutionException("Release failed with status: " + status);
             }
         } catch (Exception e) {
-            throw new MojoException("Release process failed", e);
+            throw new MojoExecutionException("Release process failed", e);
         }
     }
 }
